--- a/LABs/LAB3/makefile
+++ b/LABs/LAB3/makefile
@@ -1,4 +1,6 @@
-all: lab3
+all: lab3 itera
 
 lab3: test.cc
-	g++ -std=c++11 test.cc bst.h -o lab3
+	g++ -std=c++11 test.cc -o lab3
+itera: itera.cc
+	g++ -std=c++11 itera.cc -o itera
